--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,35 @@ body {
     background: #1f1e1e;
     cursor: pointer;
 }
+
+#listaTarefas {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#listaTarefas li {
+    padding: 20px;
+    background: #191818;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.btnAcao {
+    border-radius: 12px;
+    width: 38px;
+    height: 38px;
+    border: 1px solid #191818;
+    margin-right: 8px;
+    cursor: pointer;
+    background: #2b2a2a;
+    color: white;
+    outline: none;
+}
+
+.btnAcao:hover {
+    background: #3c3a3a;
+}
