--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,31 @@ body {
 .btnAcao:hover {
     background: #3c3a3a;
 }
+
+.titulozinho {
+    font-family: Arial, Helvetica, sans-serif;
+    color: yellow;
+    cursor: pointer;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+}
+
+.rodape {
+    width: 100%;
+    height: 60px;       
+    background-color: #3c3a3a;
+    bottom: 0;
+    position: fixed;    
+    opacity: .7;
+    justify-content: center
+
+}
+
+.rodape  p {
+    color: yellow;font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    font-size: 12pt;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    text-align: center;
+}
