--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ body {
     bottom: 0;
     position: fixed;    
     opacity: .7;
-    justify-content: center
+    justify-content: center;
 
 }
 
